Feat: Implement problem 6 main solution